--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -62,7 +62,7 @@
     </blockquote>
 
     <h2>Introduction</h2>
-    <p><span lang="fr">René Girard</span> (1923-2015) was a French literary critic and philosopher 
+    <p><span lang="fr">René Girard</span> (1923–2015) was a French literary critic and philosopher 
       whose work is difficult to categorise. 
       In addition to literature and philosophy, his work is also relevant philosophical anthropology, 
       psychology and economics (although he did not publish in all these areas).
@@ -263,7 +263,7 @@
         <i class="booktitle"><strong>Des choses cachées depuis la fondation du monde</strong>: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. Grasset, 1978.
         <a href="http://www.grasset.fr/des-choses-cachees-depuis-la-fondation-du-monde-9782246618416"><abbr>ISBN</abbr> 9782246618416</a>. 
         <br /><span lang="en-GB">This book consists of conversations between 
-        René Girard and the psychiatrists Jean-Michel Oughourlian and Guy Lefort.
+        René Girard and the psychiatrists <span lang="fr">Jean-Michel Oughourlian</span> and <span lang="fr">Guy Lefort</span>.
         Girard clarifies certain parts of <i class="booktitle">La Violence et le sacré</i>
         and formulates his theory about the <i class="booktitle">New Testament</i> 
         as a book that unveils and denounces scapegoating mechanisms.
@@ -383,7 +383,8 @@
       <li lang="fr">Girard, René: 
         <i class="booktitle">Celui par qui le scandale arrive</i>. Paris: Desclée de Brouwer, 2001.
         <!-- http://www.editionsddb.fr/ -->
-        <span>
+        <a href="https://www.editionsddb.fr/livre/fiche/celui-par-qui-le-scandale-arrive-9782220050119"><abbr>ISBN</abbr> 9782220050119</a>.
+        <span lang="en-GB">
         <br />Translations:</span>
         <ul>
           <li lang="en"><i class="booktitle">The One by Whom Scandal Comes</i>. Studies in Violence, Mimesis, &amp; Culture.
@@ -413,7 +414,7 @@
       <li lang="fr">Girard, René: 
         <i class="booktitle">Les Origines de la culture</i>. 
         <span lang="fr">Entretiens avec Pierpaolo Antonello et João César de Castro Rocha, 
-        suivi d’une réponse à Régis Debray sur ses critiques publiées dans <i>Le feu sacré</i> en 2003</span> 
+        suivi d’une réponse à Régis Debray sur ses critiques publiées dans <i>Le feu sacré</i> en 2003</span>.
         2004<!-- @@check -->. Fayard, 2011
         <a href="http://www.fayard.fr/les-origines-de-la-culture-9782818502112"><abbr>ISBN</abbr> 9782818502112</a>.
         <br /><span lang="en-GB">Translations:</span>
