Added MIT titles. Selected highlights.

--- a/lijst.html
+++ b/lijst.html
@@ -59,11 +59,13 @@
       (3rd edition. University of Chicago Press, 2008.
       <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))
     </li>
-    <li>Polanyi, Karl: <i class="booktitle">The Great Transformation: The Political and Economic Origins of Our Time</i>. 
+    <li>Polanyi, Karl: 
+      <strong><i class="booktitle">The Great Transformation: The Political and Economic Origins of Our Time</i></strong>. 
       Beacon Press, 2001.
       <a href="http://www.beacon.org/The-Great-Transformation-P46.aspx"><abbr>ISBN</abbr> 978-080705643-1</a>.
     </li>
-    <li>Parkin, Alan J.: <i class="booktitle">Essential Cognitive Psychology</i>. 
+    <li>Parkin, Alan J.: 
+      <strong><i class="booktitle">Essential Cognitive Psychology</i></strong>. 
       [2001] Routlege, 2014.
       <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
     </li>
@@ -131,7 +133,8 @@
       Penguin, 2007. (464 pages)
       <a href="http://www.penguinrandomhouse.com/books/294244/breaking-the-spell-by-daniel-c-dennett/"><abbr>ISBN</abbr> 978-0143038337</a>. (? 18 €)
     </li>
-    <li>Feyerabend, Paul: <i class="booktitle">Against Method</i>. Verso, 2010.
+    <li>Feyerabend, Paul: 
+      <strong><i class="booktitle">Against Method</i></strong>. Verso, 2010.
       <abbr>ISBN</abbr>978-1844674428. (? 20 €)
     </li>
     <li>Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>. [1988]
@@ -142,7 +145,8 @@
       Harvard University Press, 1983. 
       <abbr>ISBN</abbr> 978 06 74 29 07 16. (? 18 €)
     </li>
-    <li>Hume, David: <i class="booktitle">An Enquiry concerning Human Understanding</i>.
+    <li>Hume, David: 
+      <strong><i class="booktitle">An Enquiry concerning Human Understanding</i></strong>.
       Edited by Tom L. Beauchamp. Oxford University Press, 1999. (304 pages)
       <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)
     </li>
@@ -235,6 +239,21 @@
       Springer, 2015. 
       <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
       <!-- @@sample pages on SpringerLink -->
+    </li>
+    <li>Bowker, Geoffrey C.; Star, Susan Leigh: 
+      <strong><i class="booktitle">Sorting Things Out: Classification and Its Consequences</i></strong>.
+      <abbr>MIT</abbr> Press, 1999.
+      <a href="https://mitpress.mit.edu/books/sorting-things-out"><abbr>ISBN</abbr> 9780262522953</a>.
+    </li>
+    <li>Bowker, Geoffrey C.; Timmermans, Stefan; Clarke, Adele C.; Balka, Ellen, eds.: 
+      <i class="booktitle">Boundary Objects and Beyond: Working with Leigh Star</i>. 
+      <abbr>MIT</abbr> Press, 2016.
+      <a href="https://mitpress.mit.edu/books/boundary-objects-and-beyond"><abbr>ISBN</abbr> 9780262528085</a>.
+      <!-- See https://en.wikipedia.org/wiki/Boundary_object -->
+    </li>
+    <li>Bowker, Geoffrey C.: <i class="booktitle">Memory Practices in the Sciences</i>. 
+      <abbr>MIT</abbr> Press, 2006.
+      <a href="https://mitpress.mit.edu/books/memory-practices-sciences"><abbr>ISBN</abbr> 9780262524896</a>.
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
