+ First Europeans in Japan.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -372,6 +372,7 @@
         </ul>
       </li>
     </ul>
+    <!-- John Dewey in China 1919–1921: https://en.wikipedia.org/wiki/John_Dewey#Visits_to_China_and_Japan -->
 
     <h4>The Long March</h4>
     <ul>
@@ -394,7 +395,7 @@
     <ul>
       <li>Cheek, Timothy, <abbr>ed.</abbr>:
         <i class="booktitle">A Critical Introduction to Mao</i>. Cambridge University Press, 2010.
-        <!-- <a href=""><abbr>ISBN</abbr> @@</a>. -->
+        <a href="http://www.cambridge.org/de/academic/subjects/history/east-asian-history/critical-introduction-mao?format=PB"><abbr>ISBN</abbr> 9780521711548</a>.
       </li>
       <li>Schram, Stuart: 
         <i class="booktitle">The Political Thought of Mao Tse-tung</i>. Enlarged and revised edition.
@@ -402,6 +403,10 @@
         <!-- <a href=""><abbr>ISBN</abbr> @@</a>. -->
         (See also the 
         <a href="http://orpheus.ucsd.edu/chinesehistory/pgp/schram2.htm">review by Zhou Guanghui</a>.)
+      </li>
+      <li>Dirlik, Arif; Healy, Paul Michael; Knight, Nick:
+        <i class="booktitle">Critical Perspectives on Mao Zedong’s Thought</i>. Humanity Books, 1997.
+        <a href="http://www.penguinrandomhouse.com/books/230496/critical-perspectives-on-mao-zedongs-thought-by-arif-dirlik-paul-michael-healy-nick-knight/"><abbr>ISBN</abbr>  9781573925976</a>.
       </li>
     </ul>
 
@@ -507,11 +512,11 @@
         <a href="https://www.harpercollins.com/9780060275853/red-scarf-girl"><abbr>ISBN</abbr> 9780060275853 (hardcover)</a>
         <abbr>ISBN</abbr> 9780064462082 (paperback).
       </li>
-      <!-- 
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
+      <li>Cook, Alexander C.: 
+        <i class="booktitle">The Cultural Revolution on Trial: Mao and the Gang of Four</i>. Cambridge University Press, 2016.
+        <a href="http://www.cambridge.org/de/academic/subjects/history/east-asian-history/cultural-revolution-trial-mao-and-gang-four?format=PB"><abbr>ISBN</abbr> 9780521135290</a>.
       </li>
+      <!-- 
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
@@ -616,6 +621,12 @@
       and its reception since its publication.
     </p>
 
+    <h4>The First Europeans in Japan</h4>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/William_Adams_%28sailor%29">William Adams (1564–1620)</a>.
+      </li>
+    </ul>
     <!-- Late Ottoman Empire / Turkey:
       * Ryan Gingeras: Sorrowful Shores: Violence, Ethnicity, and the End of the Ottoman Empire 1912-1923. Oxford University Press, 2011: https://global.oup.com/academic/product/sorrowful-shores-9780199698349
       * Ryan Gingeras: Mustafa Kemal Atatürk: Heir to the Empire. Oxford University Press, 2015: https://global.oup.com/academic/product/mustafa-kemal-atatrk-9780190250010
@@ -805,7 +816,8 @@
         (Wikipedia).
       </li>
       <li>
-        <a href="https://en.wikipedia.org/wiki/1511_in_art">1511 in art</a>
+        <a href="https://en.wikipedia.org/wiki/1511_in_art">1511 in art</a>,
+        <a href="https://en.wikipedia.org/wiki/1511_in_literature">1511 in literature</a>
         and
         <a href="https://en.wikipedia.org/wiki/Category:1511">Category:1511</a>
         (Wikipedia).
@@ -1266,76 +1278,87 @@
 
 
     <h2>Politics and Economy</h2>
+    <h3>The Shock Doctrine</h3>
+    <p>Klein, Naomi:
+      <i class="booktitle">The Shock Doctrine: The Rise of Disaster Capitalism</i>.
+      [Metropolitan Books, Henry Holt and Company, 2007]. Penguin Books, 2008.
+      <abbr>ISBN</abbr> 978-0-141-02453-0.
+    </p>
+    <p>See also:</p>
     <ul>
-      <li>Klein, Naomi:
-        <i class="booktitle">The Shock Doctrine: The Rise of Disaster Capitalism</i>.
-        [Metropolitan Books, Henry Holt and Company, 2007]. Penguin Books, 2008.
-        <abbr>ISBN</abbr> 978-0-141-02453-0.
-        <br />See also: 
-        <ul>
-          <li><a href="https://en.wikipedia.org/wiki/Donald_Ewen_Cameron">Donald Ewen Cameron</a>:
-            some of this research took place in the context of the 
-            <a href="https://en.wikipedia.org/wiki/Project_MKUltra">Project MKUltra</a> mind control program,
-            which was covertly sponsored by the <abbr title="Central Intelligence Agency">CIA</abbr>.
-            <!-- also wrote The Social Reorganization of Germany, in which he claimed "German culture and its people would have offspring bound to become a threat to world peace in 30 years" (Wikipedia). -->
-          </li>
-          <li>Friedman, Milton:
-            <i class="booktitle">Capitalism and Freedom</i>. 1962.
-          </li>
-          <li>Friedman, Milton; Friedman, Rose D.:
-            <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
-          </li>
-          <li>Galeano, Eduardo:
-            <i class="booktitle">Days and Nights of Love and War</i>. 1983.
-            <!-- @@original title and year -->
-          </li>
-          <li>Hayek, Friedrich A.:
-            <i class="booktitle">The Road to Serfdom</i>. 1944. 
-          </li>
-          <li>Keynes, John Maynard:
-            <i class="booktitle">The End of Laissez-Faire</i>. 1926. 
-            <i class="booktitle">The Economic Consequences of Peace</i>. 1919.
-            (And other books.)
-          </li>
-          <li>Gunder Frank, André:
-            <i class="booktitle">Economic Genocide in Chile: Monetarist Theory Versus Humanity</i>. 
-            Nottingham, <abbr>UK</abbr>: Spokesman Books, 1976.
-          </li>
-          <li>Feitlowitz, Marguerite:
-            <i class="booktitle">A Lexicon of Terror: Argentina and the Legacies of Torture</i>. New York: Oxford University Press, 1998.
-          </li>
-          <li>Williamson, John, ed.:
-            <i class="booktitle">The Political Economy of Policy Reform</i>.
-            Washington <abbr>D.C.</abbr>: Institute for International Economics, 1994.
-          </li>
-          <li>Conaghan, Catherine M.; Malloy, James M.:
-            <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: Universit of Pittsburgh Press, 1994.
-          </li>
-          <li>Stiglitz, Joseph E.:
-            <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002.
-          </li>
-          <li>Fewsmith, Joseph:
-            <i class="booktitle">China Since Tiananmen: The Politics of Transition</i>. Cambridge: Cambrdige University Press, 2001.
-          </li>
-          <li>Wang, Hui:
-            <i class="booktitle">China's New Order: Society, Politics and Economy in Transition</i>. Cambridge, <abbr>MA</abbr>: Harvard University Press, 2003.
-          </li>
-          <li>Gumede, William Mervin:
-            <i class="booktitle">Thabo Mbeki and the Battle for the Soul of the <abbr>ANC</abbr></i>. Cape Town: Zebra Press, 2005.
-          </li>
-          <li>Klein, Lawrence R.; Pomer, Marshall:
-            <i class="booktitle">The New Russia: Transition Gone Awry</i>. Stanford: Stanford University Press, 2001.
-          </li>
-          <li>Reddaway, Peter; Glinski, Dmitri:
-            <i class="booktitle">The Tragedy of Russia's Reforms: Market Bolshevism against Democracy</i>. Washington, <abbr>D.C.</abbr>: United States Institute for Peace Press, 2001.
-          </li>
-          <li>Freeland, Chrystia:
-            <i class="booktitle">Sale of the Century: Russia's Wild Ride from Communism to Capitalism</i>. New York: Crown, 2000.
-          </li>
-          <li>Budhoo, Davison L.:
-            <i class="booktitle">Enough Is Enough: Dear Mr. Camdessus &hellip; Open Letter of Resignation to the Managing Director of the International Monetary Fund</i>. New York: New Horizons Press, 1990.
-          </li>
-        </ul>
+      <li><a href="https://en.wikipedia.org/wiki/Donald_Ewen_Cameron">Donald Ewen Cameron</a>:
+        some of this research took place in the context of the 
+        <a href="https://en.wikipedia.org/wiki/Project_MKUltra">Project MKUltra</a> mind control program,
+        which was covertly sponsored by the <abbr title="Central Intelligence Agency">CIA</abbr>.
+        <!-- also wrote The Social Reorganization of Germany, in which he claimed "German culture and its people would have offspring bound to become a threat to world peace in 30 years" (Wikipedia). -->
+      </li>
+      <li>Coup d'états in South America in the 1970s:
+        <a href="https://en.wikipedia.org/wiki/Ecuador#Military_governments_.281972.E2.80.9379.29">Ecuador, 1972 and 1976</a>,
+        <a href="https://en.wikipedia.org/wiki/1973_Chilean_coup_d%27%C3%A9tat">1973 Chilean coup d'état</a>
+        (socialist president Salvador Allende overthrown by Agusto Pinochet; see also
+        <a href="https://en.wikipedia.org/wiki/Missing_(film)">Missing (1982 film)</a>),
+        <a href="https://en.wikipedia.org/wiki/1973_Uruguayan_coup_d%27%C3%A9tat">1973 Uruguayan coup d'état</a>
+        (president Bordaberry closed parliament and ruled with the assistance of the military),
+        <a href="https://en.wikipedia.org/wiki/Tacnazo">El Tacnazo</a> (Peru, 1975),
+        <a href="https://en.wikipedia.org/wiki/1975_Honduran_coup_d%27%C3%A9tat">1975 Honduran coup d'état</a>,
+        <a href="https://en.wikipedia.org/wiki/1976_Argentine_coup_d%27%C3%A9tat">1976 Argentine coup d'état</a>
+        (president Isabel Perón is replaced by a military junta led by General Jorge Rafael Videla and others) 
+      </li>
+      <li>Friedman, Milton:
+        <i class="booktitle">Capitalism and Freedom</i>. 1962.
+      </li>
+      <li>Friedman, Milton; Friedman, Rose D.:
+        <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Eduardo_Galeano">Galeano, Eduardo</a>:
+        <a href="https://en.wikipedia.org/wiki/Days_and_Nights_of_Love_and_War" class="booktitle">Days and Nights of Love and War</a>. 1983.
+        (Originally in Spanish: <i class="booktitle" lang="es">Días y Noches de Amor y de Guerra</i>, 1978.)
+      </li>
+      <li>Hayek, Friedrich A.:
+        <i class="booktitle">The Road to Serfdom</i>. 1944. 
+      </li>
+      <li>Keynes, John Maynard:
+        <i class="booktitle">The End of Laissez-Faire</i>. 1926. 
+        <i class="booktitle">The Economic Consequences of Peace</i>. 1919.
+        (And other books.)
+      </li>
+      <li>Gunder Frank, André:
+        <i class="booktitle">Economic Genocide in Chile: Monetarist Theory Versus Humanity</i>. 
+        Nottingham, <abbr>UK</abbr>: Spokesman Books, 1976.
+      </li>
+      <li>Feitlowitz, Marguerite:
+        <i class="booktitle">A Lexicon of Terror: Argentina and the Legacies of Torture</i>. New York: Oxford University Press, 1998.
+      </li>
+      <li>Williamson, John, ed.:
+        <i class="booktitle">The Political Economy of Policy Reform</i>.
+        Washington <abbr>D.C.</abbr>: Institute for International Economics, 1994.
+      </li>
+      <li>Conaghan, Catherine M.; Malloy, James M.:
+        <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: Universit of Pittsburgh Press, 1994.
+      </li>
+      <li>Stiglitz, Joseph E.:
+        <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002.
+      </li>
+      <li>Fewsmith, Joseph:
+        <i class="booktitle">China Since Tiananmen: The Politics of Transition</i>. Cambridge: Cambrdige University Press, 2001.
+      </li>
+      <li>Wang, Hui:
+        <i class="booktitle">China's New Order: Society, Politics and Economy in Transition</i>. Cambridge, <abbr>MA</abbr>: Harvard University Press, 2003.
+      </li>
+      <li>Gumede, William Mervin:
+        <i class="booktitle">Thabo Mbeki and the Battle for the Soul of the <abbr>ANC</abbr></i>. Cape Town: Zebra Press, 2005.
+      </li>
+      <li>Klein, Lawrence R.; Pomer, Marshall:
+        <i class="booktitle">The New Russia: Transition Gone Awry</i>. Stanford: Stanford University Press, 2001.
+      </li>
+      <li>Reddaway, Peter; Glinski, Dmitri:
+        <i class="booktitle">The Tragedy of Russia's Reforms: Market Bolshevism against Democracy</i>. Washington, <abbr>D.C.</abbr>: United States Institute for Peace Press, 2001.
+      </li>
+      <li>Freeland, Chrystia:
+        <i class="booktitle">Sale of the Century: Russia's Wild Ride from Communism to Capitalism</i>. New York: Crown, 2000.
+      </li>
+      <li>Budhoo, Davison L.:
+        <i class="booktitle">Enough Is Enough: Dear Mr. Camdessus &hellip; Open Letter of Resignation to the Managing Director of the International Monetary Fund</i>. New York: New Horizons Press, 1990.
       </li>
     </ul>
 
