--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -135,6 +135,9 @@
       <li>Wikipedia:
         <a href="https://en.wikipedia.org/wiki/Base_rate_fallacy">Base rate fallacy</a>.
       </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/Survivorship_bias">Survivorship bias or survival bias</a>.
+      </li>
     </ul>
 
     <h3>Bayesian Probability and Bayes' Theorem</h3>
