Abraham's book on Warren S. McCulloch.

--- a/lijst.html
+++ b/lijst.html
@@ -255,6 +255,10 @@
       <abbr>MIT</abbr> Press, 2006.
       <a href="https://mitpress.mit.edu/books/memory-practices-sciences"><abbr>ISBN</abbr> 9780262524896</a>.
     </li>
+    <li>Abraham, Tara H.: <i class="booktitle">Rebel Genius: Warren S. McCulloch's Transdisciplinary Life in Science</i>.
+      <abbr>MIT</abbr>, 2016.
+      <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
+    </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
