Marx; Das Kapital.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1362,6 +1362,27 @@
       </li>
     </ul>
 
+    <h3>Marx: <i class="booktitle" lang="de">Das Kapital</i></h3>
+    <ul>
+      <li lang="de">Marx, Karl:
+        <i class="booktitle">Das Kapital. Kritik der politischen Ökonomie</i>. 
+        Im Zusammenhang ausgewählt und eingeleitet von Benedikt Kautsky. Stuttgart: Alfred Kröner, 1969.
+        <!-- @@ISBN -->
+      </li>
+      <li lang="de">Berger, Michael: 
+        <i class="booktitle">Karl Marx</i>. <abbr>UTB</abbr> Profile. <abbr>UTB</abbr> 3010. 
+        Paderborn: Wilhelm Fink, 2008.
+        <!-- @@ISBN -->
+      </li>
+    </ul>
+
+    <h3>Geopolitics</h3>
+    <ul>
+      <li>Copeland, Miles:
+        <i class="booktitle">The Game of Nations: The Amorality of Power Politics</i>. Simon &amp; Schuster, 1970.<!-- Wikipedia -->
+      </li>
+    </ul>
+
 
     <h2>Science in Society</h2>
     <ul>
