Eric H. Cline: 1177 BC.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -583,7 +583,7 @@
     </ul>
     -->
 
-    <h3>History of Other Parts of Asia</h3>
+    <h3>History of Other Parts of the World</h3>
     <h4>The Japanese Occupation of Korea</h4>
     <ul>
       <li>Duus, Peter: 
@@ -634,6 +634,18 @@
       * Ronald Grigor Suny, Fatma Müge Göçek, and Norman M. Naimark, eds.: A Question of Genocide: Armenians and Turks at the End of the Ottoman Empire. Oxford University Press, 2011.
       * Donald Bloxham: The Great Game of Genocide: Imperialism, Nationalism, and the Destruction of the Ottoman Armenians. Oxford UP, 2007.
     -->
+    <h4>1177 <abbr>B.C.</abbr>: The Year Civilization Collapsed</h4>
+    <ul>
+      <li>Cline, Eric H.:
+        <i class="booktitle">1177 <abbr>B.C.</abbr>: The Year Civilization Collapsed</i>.
+        Princeton University Press, 2014, 2015. (264 pages)
+        <a href="http://press.princeton.edu/titles/10597.html"><abbr>ISBN</abbr> 9780691168388</a>.
+      </li>
+      <li>Cline, Eric H.:
+        <a href="https://www.youtube.com/watch?v=bRcu-ysocX4">1177 <abbr>B.C.</abbr>: The Year Civilization Collapsed</a>,
+        YouTube video, 70 minutes, October 2016.
+      </li>
+    </ul>
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
@@ -731,7 +743,7 @@
         Gaskill, Malcolm: <i class="booktitle">Witchcraft: A Very Short Introduction</i> Oxford University Press, 2010.
         <a href="https://global.oup.com/academic/product/witchcraft-a-very-short-introduction-9780199236954"><abbr>ISBN</abbr> 9780199236954</a>.
         <br />
-        Frenschkowski, Marco: <span lang="de"><i class="booktitle">Die Hexen. Eine kulturhistorische Analyse</i>. Marix Verlag, 2016. 
+        Frenschkowski, Marco: <span lang="de"><i class="booktitle">Die Hexen. Eine kulturhistorische Analyse</i>. Marix Verlag</span>, 2016. 
         <a href="http://www.verlagshaus-roemerweg.de/Marix_Verlag/Marco_Frenschkowski-Die_Hexen-EAN:9783865399656.html"><abbr>ISBN</abbr> 978-3-86539-965-6</a>.
       </li>
       <li><span lang="fr">Droit du seigneur</span> <abbr>aka</abbr> <span lang="la">ius primae noctis</span>: 
@@ -1453,7 +1465,7 @@
         who is a republican and a Mormon, is confronted by a ten-year old girl with a question about water pollution.
         Chaffetz dodges the question by saying, <q>I don't pretend to have all the answers to all the questions</q>.
         He admits that what gets thrown into the air and the water has an effect on the enviroment,
-        then adds he has a &dlquo;different approach to being responsible for the environment&rdquo; than
+        then adds he has a &ldquo;different approach to being responsible for the environment&rdquo; than
         citizens who are worried about pollution.
       </li>
       <li>The Majority Report with Sam Seder:
