--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -648,6 +648,35 @@
     </ul>
 
     <h3>European History</h3>
+    <h4>The &ldquo;brave Belgae&rdquo;</h4>
+    <p><a href="https://en.wikipedia.org/wiki/Julius_Caesar">Julius Caesar</a> called the Belgae the bravest of the people of Gaul. 
+    </p>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Belgae">Belgae</a> on Wikipedia.
+      </li>
+      <li lang="nl">Janssens, Ugo:
+        <i class="booktitle">De Oude Belgen</i>.
+        Vianen: <span lang="en">The House of Books</span>, 2007.
+        (<a href="http://www.worldcat.org/title/oude-belgen/oclc/768595505" hreflang="en" lang="en">WorldCat entry</a>,
+        <a href="http://historischhuis.nl/recensiebank/review/show/476">recensie door Jef Abbeel</a>.)
+      </li>
+      <li lang="fr">Weber, Patrick: 
+        <i class="booktitle">La grande histoire de la Belgique</i>.
+        Perrin, 2013. (336 pages)
+        <a href="http://www.editions-perrin.fr/livre/la-grande-histoire-de-la-belgique/9782262035174"><abbr>ISBN</abbr> 9782262035174</a>.
+      </li>
+      <li lang="fr">Jules César:
+        <i class="booktitle">La guerre des gaules</i>. Folio classique.
+        Gallimard, 1981. (480 pages)
+        <a href="http://www.folio-lesite.fr/Catalogue/Folio/Folio-classique/Guerre-des-Gaules"><abbr>ISBN</abbr> 9782070373154</a>.
+      </li>
+      <li lang="fr">Jules César:
+        <i class="booktitle">La guerre des gaules</i>.
+        Garnier Flammarion, 1964.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=19083&levelCode=home"><abbr>ISBN</abbr> 9782080700124</a>.
+      </li>
+    </ul>
+
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
     <p>The Crusades are one of many topics that Westerners only learn about from
       a Western point of view. Since the 1980s (and possibly even earlier),
@@ -672,6 +701,12 @@
       <li>Riley-Smith, Jonathan, <abbr>ed.</abbr>: 
         <i class="booktitle">The Oxford History of the Crusades</i>. Oxford University Press, 2002. 
         <a href="http://ukcatalogue.oup.com/product/9780192803122.do"><abbr>ISBN</abbr> 978-0-19-280312-2</a>.
+      </li>
+      <li lang="fr">Heers, Jacques:
+        <i class="booktitle">Histoire des croisades</i>.
+        Perrin, 2014. (336 pages)
+        <a href="http://www.editions-perrin.fr/livre/histoire-des-croisades/9782262037734"><abbr>ISBN</abbr> 9782262037734</a>.
+        <!-- also by Jacques Heers: Les négriers en terres d'Islam: La première traite des Noirs VIIe–XVIe siècle. Perrin, 2003: http://www.editions-perrin.fr/livre/les-negriers-en-terres-d-islam/9782262018504 -->
       </li>
     </ul>
 
@@ -795,6 +830,11 @@
             <i class="booktitle">Menschen, die Geschichte schrieben. Das Spätmittelalter</i>. 
             Marix Verlag, 2014.
             <a href="http://www.verlagshaus-roemerweg.de/marixwissen/Michael_Neumann-Almut_Schneider_%28Hrsg.%29-Menschen_die_Geschichte_schrieben-Spaetmittelalter-EAN:9783865399816.html"><abbr>ISBN</abbr> 978-3-86539-981-6</a>.
+          </li>
+          <li lang="fr">Anonymes:
+            <i class="booktitle">Les Quinze Joies du mariage</i>. Folio classique.
+            Gallimard, 2016. (400 pages,)
+            <a href="http://www.folio-lesite.fr/Catalogue/Folio/Folio-classique/Les-Quinze-Joies-du-mariage"><abbr>ISBN</abbr> 9782070445165</a>.
           </li>
         </ul>
       </li>
