Elizabeth I and the Ottomans.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -896,6 +896,19 @@
       -->
     </ul>
 
+    <h4>Queen Elizabeth I and the Ottoman Empire</h4>
+    <ul>
+      <li>Brotton, Jerry: 
+        <i class="booktitle">The Sultan and the Queen: The Untold Story of Queen Elizabeth and Islam</i>.
+        Viking (Penguin Random House), 2016. 
+        <a href="http://www.penguinrandomhouse.com/books/317980/the-sultan-and-the-queen-by-jerry-brotton/9780525428824/"><abbr>ISBN</abbr> 9780525428824</a>.
+      </li>
+      <li>Brotton, Jerry: 
+        <i class="booktitle">This Orient Isle: Elizabethan England and the Islamic World</i>.
+        <a href="https://www.penguin.co.uk/books/259497/this-orient-isle/"><abbr>ISBN</abbr> [978-0099555032]</a>.
+      </li>
+    </ul>
+
     <h4>The Scottish Enlightenment</h4>
     <p>The Enlightenment is strongly associated with French thinkers such as 
       <span lang="fr">Voltaire</span>, <span lang="fr">Rouseau</span> and <span lang="fr">Diderot</span>,
