P. Frankopan: The First Crusade.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -708,6 +708,10 @@
         <a href="http://www.editions-perrin.fr/livre/histoire-des-croisades/9782262037734"><abbr>ISBN</abbr> 9782262037734</a>.
         <!-- also by Jacques Heers: Les négriers en terres d'Islam: La première traite des Noirs VIIe–XVIe siècle. Perrin, 2003: http://www.editions-perrin.fr/livre/les-negriers-en-terres-d-islam/9782262018504 -->
       </li>
+      <li>Frankopan, Peter: 
+        <i class="booktitle">The First Crusade: The Call from the East</i>.
+        <a href="https://www.penguin.co.uk/books/1088774/the-first-crusade/">Vintage</a> (Penguin), 2013.
+      </li>
     </ul>
 
     <h4>Myths about the Middle Ages</h4>
