Kowner: From White to Yellow.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -626,6 +626,11 @@
       <li>
         <a href="https://en.wikipedia.org/wiki/William_Adams_%28sailor%29">William Adams (1564–1620)</a>.
       </li>
+      <li>Kowner, Rotem:
+        <i class="booktitle">From White to Yellow: The Japanese in European Racial Thought, 1300-1735</i>.
+        McGill Queen University Press, 2014. (712 pages)
+        <a href="http://www.mqup.ca/from-white-to-yellow-products-9780773544550.php?page_id=46&"><abbr>ISBN</abbr> 9780773544550</a>.
+      </li>
     </ul>
     <!-- Late Ottoman Empire / Turkey:
       * Ryan Gingeras: Sorrowful Shores: Violence, Ethnicity, and the End of the Ottoman Empire 1912-1923. Oxford University Press, 2011: https://global.oup.com/academic/product/sorrowful-shores-9780199698349
