Shakespeare and the Pirates.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -918,6 +918,51 @@
       </li>
     </ul>
 
+    <h4>Shakespeare and the Pirates</h4>
+    <p>In other words: Shakespeare's plays: from manuscript to stage to print.</p>
+    <ul>
+      <li>Wikipedia: First Folio, False Folio, Bad Quarto (usually a pirated edition), etcetera.
+      </li>
+      <li>Royal Shakespeare Company:
+        <a href="https://www.youtube.com/playlist?list=PLEB3C48747472A268">The First Folio</a>
+        (playlist with 4 YouTube videos).
+      </li>
+      <li>Smith, Emma:
+        <i class="booktitle">The Making of Shakespeare's First Folio</i>.
+        Bodleian Library, 2015. (192 pages).
+        <abbr>ISBN</abbr> 978-1851244423.
+      </li>
+      <li>Smith, Emma:
+        <i class="booktitle">Shakespeare's First Folio: Four Centuries of an Iconic Book</i>.
+        Oxford University Press, 2016. (400 pages).
+        <a href="https://global.oup.com/academic/product/shakespeares-first-folio-9780198754367"><abbr>ISBN</abbr> 9780198754367</a>.
+      </li>
+      <li>West, Anthony James:
+        <i class="booktitle">The Shakespeare First Folio: The History of the Book. Volume I: An Account of the First Folio Based on its Sales and Prices 1623-2000</i>.
+        Oxford University Press, 2001. (238 pages).
+        <a href="https://global.oup.com/academic/product/the-shakespeare-first-folio-the-history-of-the-book-9780198187691"><abbr>ISBN</abbr> 9780198187691</a>.
+        <br />
+        <i class="booktitle">The Shakespeare First Folio: The History of the Book. Volume II: A New Worldwide Census of First Folios</i>.
+        Oxford University Press, 2003. (428 pages)
+        <a href="https://global.oup.com/academic/product/the-shakespeare-first-folio-the-history-of-the-book-9780198187684"><abbr>ISBN</abbr> 9780198187684</a>.
+      </li>
+      <li class="booktitle">Shakespeare, William; Hinman, Charlton: 
+        <i>The Norton Facsimile of the First Folio of Shakespeare</i>.
+        Norton, 2011 (reprint). (968 pages)
+        <a href="http://books.wwnorton.com/books/978-0-393-03985-6/"><abbr>ISBN</abbr> 978-0-393-03985-6</a>.
+        <!-- Norton Shakespeare YouTube channel: https://www.youtube.com/channel/UCbtVyjUXL0-ANtMljuf3OXA/featured -->
+      </li>
+      <li>Shakespeare, William; Freeman, Neil: 
+        <i class="booktitle">Applause First Folio of Shakespeare in Modern Type</i>.
+        Applause Theatre &amp; Cinema Books. (1184 pages).
+        <a href="https://www.halleonardbooks.com/product/viewproduct.action?itemid=314423&subsiteid=166"><abbr>ISBN</abbr> 9781557833334</a>.
+      </li>
+      <!-- 
+        * Editing, Performance, Texts: New Practices in Medieval and Early Modern English Drama. Palgrave Macmillan, 2004. https://www.amazon.de/Editing-Performance-Texts-Practices-Medieval/dp/1349457639/ 
+      -->
+    </ul>
+
+
     <h4>The Scottish Enlightenment</h4>
     <p>The Enlightenment is strongly associated with French thinkers such as 
       <span lang="fr">Voltaire</span>, <span lang="fr">Rouseau</span> and <span lang="fr">Diderot</span>,
@@ -1299,47 +1344,6 @@
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/ockhams-razors-users-manual?format=PB"><abbr>ISBN</abbr> 9781107692534</a>.
         <!-- @@check excerpt! -->
         <!-- source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512 -->
-      </li>
-      <li>Shakespeare's plays: from manuscript to stage to print.
-        <ul>
-          <li>Royal Shakespeare Company:
-            <a href="https://www.youtube.com/playlist?list=PLEB3C48747472A268">The First Folio</a>
-            (playlist with 4 YouTube videos).
-          </li>
-          <li>Smith, Emma:
-            <i class="booktitle">The Making of Shakespeare's First Folio</i>.
-            Bodleian Library, 2015. (192 pages).
-            <abbr>ISBN</abbr> 978-1851244423.
-          </li>
-          <li>Smith, Emma:
-            <i class="booktitle">Shakespeare's First Folio: Four Centuries of an Iconic Book</i>.
-            Oxford University Press, 2016. (400 pages).
-            <a href="https://global.oup.com/academic/product/shakespeares-first-folio-9780198754367"><abbr>ISBN</abbr> 9780198754367</a>.
-          </li>
-          <li>West, Anthony James:
-            <i class="booktitle">The Shakespeare First Folio: The History of the Book. Volume I: An Account of the First Folio Based on its Sales and Prices 1623-2000</i>.
-            Oxford University Press, 2001. (238 pages).
-            <a href="https://global.oup.com/academic/product/the-shakespeare-first-folio-the-history-of-the-book-9780198187691"><abbr>ISBN</abbr> 9780198187691</a>.
-            <br />
-            <i class="booktitle">The Shakespeare First Folio: The History of the Book. Volume II: A New Worldwide Census of First Folios</i>.
-            Oxford University Press, 2003. (428 pages)
-            <a href="https://global.oup.com/academic/product/the-shakespeare-first-folio-the-history-of-the-book-9780198187684"><abbr>ISBN</abbr> 9780198187684</a>.
-          </li>
-          <li class="booktitle">Shakespeare, William; Hinman, Charlton: 
-            <i>The Norton Facsimile of the First Folio of Shakespeare</i>.
-            Norton, 2011 (reprint). (968 pages)
-            <a href="http://books.wwnorton.com/books/978-0-393-03985-6/"><abbr>ISBN</abbr> 978-0-393-03985-6</a>.
-            <!-- Norton Shakespeare YouTube channel: https://www.youtube.com/channel/UCbtVyjUXL0-ANtMljuf3OXA/featured -->
-          </li>
-          <li>Shakespeare, William; Freeman, Neil: 
-            <i class="booktitle">Applause First Folio of Shakespeare in Modern Type</i>.
-            Applause Theatre &amp; Cinema Books. (1184 pages).
-            <a href="https://www.halleonardbooks.com/product/viewproduct.action?itemid=314423&subsiteid=166"><abbr>ISBN</abbr> 9781557833334</a>.
-          </li>
-          <!-- 
-            * Editing, Performance, Texts: New Practices in Medieval and Early Modern English Drama. Palgrave Macmillan, 2004. https://www.amazon.de/Editing-Performance-Texts-Practices-Medieval/dp/1349457639/ 
-          -->
-        </ul>
       </li>
       <!-- 
         * John Rawls: A Theory of Justice 
