--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -918,6 +918,9 @@
       </li>
     </ul>
 
+    <h4>Atheist, Playwright, Poet, Spy</h4>
+    <p>About <a href="https://en.wikipedia.org/wiki/Christopher_Marlowe">Christopher Marlowe (1564–1593)</a>.</p>
+
     <h4>Shakespeare and the Pirates</h4>
     <p>In other words: Shakespeare's plays: from manuscript to stage to print.</p>
     <ul>
